2002-07-17  Lars Clausen  <lrclause@cs.uiuc.edu>

	* configure.in: Allow use of AM_GLIB_GNU_GETTEXT for those who
	have it.

	* dia.desktop.in (_Comment): Changed after suggestion from
	calum.benson@ireland.sun.com (bug 88345)

	* app/sheets_dialog_callbacks.c: Fix from Dolores Alia de Saravia
	<loli@unsa.edu.ar> that makes user/system distinction better.

2002-07-16  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/render_libart.c: Got the context right, removed crashes.

	* app/commands.c: 
	* app/commands.h: 
	Redraw menu item.

	* app/display.c: 
	* app/display.h: 
	* app/interface.c: 
	* app/menus.c: 
	Remove libart #defines from most places (still around for png export).

	* app/render_libart.h: 
	* app/render_libart.c: 
	* configure.in (HAVE_LIBART): 
	Starting on update of libart stuff for png export (without X).

	* app/autosave.h (autosave_check_autosave): 
	* app/load_save.h: 
	* app/diagram.h: 
	* app/Makefile.am (dia_core_files): 
	* app/load_save.c: 
	* app/diagram.c (diagram_set_modified): 
	* app/autosave.c: 
	* app/app_procs.c (app_init): 
	Autosave support.  No automatic restore yet.

2002-07-16  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/render_eps.c (create_eps_renderer): #ifdef'd a scale
	assignment. 
	
2002-07-15  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/interface.c (fill_sheet_menu): Tear-off for sheets menu.

2002-07-15  Andrew Ferrier  <andrew@new-destiny.co.uk>

	* Fix for 'make dist' etc. --- problem caused by
	previous AUTHORS patch.

2002-07-14  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/cgm/cgm.c (init_fonts): Changed pango_font_map to
	pango_context. 
	(set_font): NULL check.
	
2002-07-12  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/disp_callbacks.c: 
	* lib/diamenu.h: 
	Addition to the object menus allows check menu items.

2002-07-11  Andrew Ferrier  <andrew@new-destiny.co.uk>

	* HACKING: completely changed to bring up-to-date.
	* AUTHORS: file needs REMOVING from CVS as now
	  dynamically generated.