@@ -154,14 +154,16 @@ dnl
 dnl i18n
 dnl
 
+AC_DEFINE(GETTEXT_PACKAGE,dia,[Needed for glib gettext])
+AC_SUBST(GETTEXT_PACKAGE)
+AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")
 ALL_LINGUAS="az ca da de el en_GB es fi fr ga hu it ja ko nl nn no pl pt pt_BR ru sk sl sv tr uk vi zh_CN zh_TW"
-
-ifdef([AM_GLIB_GNU_GETTEXT],[AM_GLIB_GNU_GETTEXT],[AM_GNU_GETTEXT])
+AM_GLIB_GNU_GETTEXT
 
 localedir='${prefix}/${DATADIRNAME}/locale'
 AC_SUBST(localedir)
 
-dnl	
+dnl
 dnl Locate the gnome-xml library
 dnl
 dnl GTK2: remove support for libxml1. move check for libxml2 in 
@@ -323,7 +325,7 @@ AM_CONDITIONAL(WITH_PYTHON, test "x$with_python" != "xno")
 AC_OUTPUT(
 Makefile
 lib/Makefile
-po/Makefile.in intl/Makefile
+po/Makefile.in
 objects/Makefile
 objects/standard/Makefile
 objects/network/Makefile
